--- a/main.html
+++ b/main.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="main.css">
+    <title>菜鸟教程(runoob.com)</title>
 </head>
 <body>
-    <h1>我的第一个标题</h1>
+    <h1>my rubbish bin</h1>
     <p>我的第一个段落。</p>
 </body>
 </html>
