--- a/main.html
+++ b/main.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
-    <title>菜鸟教程(runoob.com)</title>
+    <title>e</title>
 </head>
 <body>
     <h1>my rubbish bin</h1>
-    <p>我的第一个段落。</p>
+    <p>hello</p>
+    <script src="main.js"></script>
 </body>
 </html>
