--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 <body>
     <h1>my rubbish bin</h1>
     <p>hello</p>
+    <h1 id="mytext" onclick="changeText();">source</h1>
+    <div id="prompt">
+        <img src="rubbish_bin.webp" width="30%" height="30%">
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
