--- a/main.html
+++ b/main.html
@@ -10,7 +10,15 @@
     <p>hello</p>
     <h1 id="mytext" onclick="changeText();">source</h1>
     <div id="prompt">
-        <img src="rubbish_bin.webp" width="30%" height="30%">
+        <img src="rubbish_bin.webp" width="30%" height="30%" onclick="imgclick()">
+    </div>
+    <h1>
+        <label>ur name</label><br>
+        <input type="text" id="myText"><br>
+        <button type="button" id="myButton">submit</button>
+    </h1>
+    <div id="print">
+
     </div>
     <script src="main.js"></script>
 </body>
