--- a/main.html
+++ b/main.html
@@ -18,8 +18,9 @@
         <button type="button" id="myButton">submit</button>
     </h1>
     <div id="print">
-
+    
     </div>
+    <embed src="https://discord.com/">
     <script src="main.js"></script>
 </body>
 </html>
