--- a/main.html
+++ b/main.html
@@ -14,13 +14,12 @@
     </div>
     <h1>
         <label>ur name</label><br>
-        <input type="text" id="myText"><br>
+        <input type="color" id="myText"><br>
         <button type="button" id="myButton">submit</button>
     </h1>
     <div id="print">
     
     </div>
-    <embed src="https://discord.com/">
     <script src="main.js"></script>
 </body>
 </html>
